# test_task_video_analytic_tg_bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: llm.py  logger.py  main.py
src/bot/: core.py  handlers.py
src/db/: alembic.ini  engine.py  models.py  utils.py
src/db/alembic/versions/: 463bb4b421f1_initial.py
